---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/dead_global_elimination/nested_struct_global.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.49 = int 1
temp.50 = int 2
temp.1.x.51 = temp.49
temp.1.y.52 = temp.50
temp.53 = int 3
temp.54 = int 4
temp.6.x.55 = temp.53
temp.6.y.56 = temp.54
temp.0.origin.x.57 = temp.1.x.51
temp.0.origin.y.58 = temp.1.y.52
temp.0.size.x.59 = temp.6.x.55
temp.0.size.y.60 = temp.6.y.56
temp.61 = temp.0.origin.x.57
setglobal 1, temp.61
temp.62 = temp.0.origin.y.58
setglobal 2, temp.62
temp.63 = temp.0.size.x.59
setglobal 3, temp.63
temp.64 = temp.0.size.y.60
setglobal 4, temp.64
getglobal temp.65, 1
temp.23.x.66 = temp.65
getglobal temp.67, 2
temp.23.y.68 = temp.67
temp.69 = temp.23.x.66
temp.70 = extern test(temp.69)
getglobal temp.71, 1
temp.30.x.72 = temp.71
getglobal temp.73, 2
temp.30.y.74 = temp.73
temp.75 = temp.30.y.74
temp.76 = extern test(temp.75)
getglobal temp.77, 3
temp.37.x.78 = temp.77
getglobal temp.79, 4
temp.37.y.80 = temp.79
temp.81 = temp.37.x.78
temp.82 = extern test(temp.81)
getglobal temp.83, 3
temp.44.x.84 = temp.83
getglobal temp.85, 4
temp.44.y.86 = temp.85
temp.87 = temp.44.y.86
temp.88 = extern test(temp.87)
return 


----------- eliminate_dead_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.49 = int 1
temp.50 = int 2
temp.1.x.51 = temp.49
temp.1.y.52 = temp.50
temp.53 = int 3
temp.54 = int 4
temp.6.x.55 = temp.53
temp.6.y.56 = temp.54
temp.0.origin.x.57 = temp.1.x.51
temp.0.origin.y.58 = temp.1.y.52
temp.0.size.x.59 = temp.6.x.55
temp.0.size.y.60 = temp.6.y.56
temp.61 = temp.0.origin.x.57
setglobal 0, temp.61
temp.62 = temp.0.origin.y.58
setglobal 1, temp.62
temp.63 = temp.0.size.x.59
setglobal 2, temp.63
temp.64 = temp.0.size.y.60
setglobal 3, temp.64
getglobal temp.65, 0
temp.23.x.66 = temp.65
getglobal temp.67, 1
temp.23.y.68 = temp.67
temp.69 = temp.23.x.66
temp.70 = extern test(temp.69)
getglobal temp.71, 0
temp.30.x.72 = temp.71
getglobal temp.73, 1
temp.30.y.74 = temp.73
temp.75 = temp.30.y.74
temp.76 = extern test(temp.75)
getglobal temp.77, 2
temp.37.x.78 = temp.77
getglobal temp.79, 3
temp.37.y.80 = temp.79
temp.81 = temp.37.x.78
temp.82 = extern test(temp.81)
getglobal temp.83, 2
temp.44.x.84 = temp.83
getglobal temp.85, 3
temp.44.y.86 = temp.85
temp.87 = temp.44.y.86
temp.88 = extern test(temp.87)
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.49 = int 1
temp.50 = int 2
temp.1.x.51 = temp.49
temp.1.y.52 = temp.50
temp.53 = int 3
temp.54 = int 4
temp.6.x.55 = temp.53
temp.6.y.56 = temp.54
temp.0.origin.x.57 = temp.1.x.51
temp.0.origin.y.58 = temp.1.y.52
temp.0.size.x.59 = temp.6.x.55
temp.0.size.y.60 = temp.6.y.56
temp.61 = temp.0.origin.x.57
setglobal 0, temp.61
temp.62 = temp.0.origin.y.58
setglobal 1, temp.62
temp.63 = temp.0.size.x.59
setglobal 2, temp.63
temp.64 = temp.0.size.y.60
setglobal 3, temp.64
getglobal temp.65, 0
temp.23.x.66 = temp.65
getglobal temp.67, 1
temp.69 = temp.23.x.66
temp.70 = extern test(temp.69)
getglobal temp.71, 0
getglobal temp.73, 1
temp.30.y.74 = temp.73
temp.75 = temp.30.y.74
temp.76 = extern test(temp.75)
getglobal temp.77, 2
temp.37.x.78 = temp.77
getglobal temp.79, 3
temp.81 = temp.37.x.78
temp.82 = extern test(temp.81)
getglobal temp.83, 2
getglobal temp.85, 3
temp.44.y.86 = temp.85
temp.87 = temp.44.y.86
temp.88 = extern test(temp.87)
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.49 = int 1
temp.50 = int 2
temp.1.x.51 = temp.49
temp.1.y.52 = temp.50
temp.53 = int 3
temp.54 = int 4
temp.6.x.55 = temp.53
temp.6.y.56 = temp.54
temp.0.origin.x.57 = temp.1.x.51
temp.0.origin.y.58 = temp.1.y.52
temp.0.size.x.59 = temp.6.x.55
temp.0.size.y.60 = temp.6.y.56
temp.61 = temp.0.origin.x.57
setglobal 0, temp.61
temp.62 = temp.0.origin.y.58
setglobal 1, temp.62
temp.63 = temp.0.size.x.59
setglobal 2, temp.63
temp.64 = temp.0.size.y.60
setglobal 3, temp.64
getglobal temp.65, 0
temp.23.x.66 = temp.65
temp.69 = temp.23.x.66
temp.70 = extern test(temp.69)
getglobal temp.73, 1
temp.30.y.74 = temp.73
temp.75 = temp.30.y.74
temp.76 = extern test(temp.75)
getglobal temp.77, 2
temp.37.x.78 = temp.77
temp.81 = temp.37.x.78
temp.82 = extern test(temp.81)
getglobal temp.85, 3
temp.44.y.86 = temp.85
temp.87 = temp.44.y.86
temp.88 = extern test(temp.87)
return
